added teacher section

--- a/index.html
+++ b/index.html
@@ -13,11 +13,8 @@
 
     <input type="search" id="searchArea" placeholder="Enter Your Grade Here"><br>
   <button  class="search">Search</button>
-    
 </form>
     <div class="result"></div>
-   
-
-    <script src="main.js"></script>
+    <script src="GradeSerach.js"></script>
 </body>
 </html>
