updated ReadMe and login

--- a/index.html
+++ b/index.html
@@ -85,6 +85,6 @@
 
     </div>
   </div>
-    <script src="./Scripts/app.js"></script>
+    <script src="./Scripts/Login.js"></script>
 </body>
 </html>
