added dashboard for Teacher page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 </head>
 
 <body>
-
+    
+ <div class="togle-mode">
+  <i class="fa-solid fa-moon"></i>
+</div>
   <!-- Header -->
   <header class="headers">
     <nav class="header-home">
@@ -23,6 +26,10 @@
         <a href="index.html">Grade</a>
       </ul>
     </nav>
+ 
+
+
+
   </header>
 
   <!-- Hero Section -->
@@ -139,6 +146,7 @@
   </div>
  </section>
  
+
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
  
   <script src="./Scripts/Login.js"></script>
