done second task for gradesearch

--- a/GradeSearch.html
+++ b/GradeSearch.html
@@ -28,16 +28,21 @@
  
 
 
+
+
+
+  </header>
+  <div class="Contentsregister">
+    <p><a href="index.html">Home</a>/GradeSearch </p>
+</div>
+
+
 <div class="contenterach">
     <h1>Search for Student Grades</h1>
     <p >Enter  your the student's ID to find Your Grades.</p> 
     <p>Click the search button to find the student.</p>
 
 </div>
-
-
-  </header>
-
 <form action="" id="forminput">
 
     <input type="search" id="searchArea" placeholder="Enter Your Grade Here"><br>
