changed the style of home page

--- a/register.html
+++ b/register.html
@@ -13,7 +13,7 @@
   <i class="fa-solid fa-moon"></i>
 </div>
   <!-- Header -->
-  <header class="headers">
+  <header class="headers " id="heder">
     <nav class="header-home">
       <ul class="nav-links">
         <a href="home.html">Home</a>
@@ -32,7 +32,7 @@
    <div class="regs"><h1>Register new students and manage their grades.</p></div> 
 
    <div class="addnew">
-    <button class="btns"> add New</button>
+    <button class="btns " id="addss"> add New</button>
    </div>
      <div class="modal">
     <div class="modal-content">
