--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
     <section class="flex flex-col-reverse md:flex-row items-center justify-between p-10 max-w-6xl mx-auto w-full">
       <div class="flex flex-col items-center space-y-5 w-full md:w-1/3 text-center">
         <h3 class="text-2xl font-bold mb-2">Your academic progress, one click away.</h3>
-        <button class="clickgrde bg-purple-500 text-white px-4 py-3 mt-3 rounded-full hover:bg-purple-600 transition duration-300 ease hover:scale-105 hover:-translate-y-2">
+        <button  id ="Btns"
+        class="clickgrde bg-purple-500 text-white px-4 py-3 mt-3 rounded-full hover:bg-purple-600 transition duration-300 ease hover:scale-105 hover:-translate-y-2">
           Click to check Your Grade
         </button>
       </div>
@@ -41,6 +42,26 @@
         <img src="school.jpg" alt="School Image" class="max-w-full h-auto rounded-lg" />
       </div>
     </section>
+
+
+    
+  <div class="modal fixed inset-0 bg-black bg-opacity-80 flex items-center justify-center z-50 hidden">
+    <div class="modal-content  bg-white rounded-lg p-6 w-full max-w-md relative flex items-center justify-center flex-col text-2xl">
+      <span class="close-modal absolute top-0 right-0 bg-gray-500 rounded-full text-white text-3xl cursor-pointer w-10 h-10 flex items-center text-center justify-center">&times;</span>
+      <div class="contents">
+        <i class="fa-solid fa-question bg-purple-500 w-10 h-10 rounded-full flex items-center justify-center text-white text-lg text-center"></i>
+        <h1 class="text-2xl p-2">Enter Your User Here ?</h1>
+        <div class="butons">
+        </div>
+        <div class="username" id="userName">
+          <form id="loginForm">
+            <input type="text " class=" inputValue w-full p-2 border rounded mt-6" placeholder="Enter your Username "  />
+            <button class="bg-purple-500 px-5 py-2 rounded-full mt-5 text-white text-semibold mx-auto flex items-center justify-center" type="submit" class="btns">Login</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
 
     <!-- Our Services -->
     <section class="py-10">
@@ -120,9 +141,7 @@
       </div>
     </section>
 
-    <!-- Scripts -->
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="main.js"></script>
+   
 
     <!-- footer -->
 
@@ -177,4 +196,7 @@
         </div>
     </footer>
   </body>
+ <!-- Scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="logins.js"></script>
 </html>
