added last faeture for Grade Search

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 
 
     
-  <div class="modal fixed inset-0 bg-black bg-opacity-80 flex items-center justify-center z-50 hidden">
+  <div class="userAdmin fixed inset-0 bg-black bg-opacity-80 flex items-center justify-center z-50 hidden">
     <div class="modal-content  bg-white rounded-lg p-6 w-full max-w-md relative flex items-center justify-center flex-col text-2xl">
-      <span class="close-modal absolute top-0 right-0 bg-gray-500 rounded-full text-white text-3xl cursor-pointer w-10 h-10 flex items-center text-center justify-center">&times;</span>
+      <span class="closeModal absolute top-0 right-0 bg-gray-500 rounded-full text-white text-3xl cursor-pointer w-10 h-10 flex items-center text-center justify-center">&times;</span>
       <div class="contents">
         <i class="fa-solid fa-question bg-purple-500 w-10 h-10 rounded-full flex items-center justify-center text-white text-lg text-center"></i>
         <h1 class="text-2xl p-2">Enter Your User Here ?</h1>
@@ -198,5 +198,5 @@
   </body>
  <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="logins.js"></script>
+    <script src="./Scripts/logins.js"></script>
 </html>
