--- a/Student.html
+++ b/Student.html
@@ -1,28 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="style.css">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Search Grade</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
 
-    <title>Search Grade</title>
 </head>
-<body>
-<div class="contenterach">
-    <h1>Search for Student Grades</h1>
-    <p >Enter  your the student's ID to find Your Grades.</p> 
-    <p>Click the search button to find the student.</p>
+<body class="bg-gray-50 min-h-screen">
+
+  <div class="text-center p-6">
+    <h1 class="text-3xl font-bold text-purple-700">Search for Student Grades</h1>
+    <p class="text-gray-600 mt-2 py-2">Enter the student's ID to view their grades and GPA.</p>
+  </div>
+
+  <form id="forminput" class="flex flex-col items-center gap-4 max-w-xl mx-auto p-4">
+    <input
+      type="search"
+      id="searchArea"
+      placeholder="Enter Your Grade Here"
+      class=" md:w-5xl px-4 py-2 border border-gray-400 rounded-full shadow-sm focus:outline-none focus:ring-2 focus:ring-purple-500"
+    />
+    <button type="submit" class="bg-purple-600 hover:bg-purple-700 text-white px-12 py-2 rounded-full text-lg transition-all">
+      Search
+    </button>
+      </form>
+
+
+
+
+  <div class="result mt-6 px-4 flex justify-center"></div>
+
+  <div>
+   <p class="text-base text-gray-600 flex justify-center mt-5"> Or Click the logout button to back the home page</p>
+      <div class="flex justify-center mt-6">
+         <button id="Logout" class="bg-purple-600 hover:bg-purple-700 text-white px-12 py-2 rounded-full shadow-md transition-all">
+            <i class="fa-solid fa-right-from-bracket bg-white"></i>Logout
+        </div>
 
 </div>
-<form action="" id="forminput">
 
-    <input type="search" id="searchArea" placeholder="Enter Your Grade Here"><br>
-  <button  class="search">Search</button>
-</form>
-    <div class="result"></div>
-    <script src="logins.js"></script>
+  <script src="./Scripts/GradeSerach.js"></script>
 </body>
 </html>
