--- a/Teacher.html
+++ b/Teacher.html
@@ -172,7 +172,7 @@
   <div class="modal-content bg-white rounded-lg p-6 w-full max-w-md relative">
     <span id="close-modal" class="absolute top-0 right-0 bg-gray-500 rounded-full text-white text-3xl cursor-pointer w-10 h-10 flex items-center justify-center">&times;</span>
     <form class="newStudentAdmin space-y-4 p-2 mt-4">
-      <input type="text" id="UserNames" placeholder="Full Name" required class="w-full p-2 border rounded" />
+      <input type="text" id="userNameAdmin" placeholder="Full Name" required class="w-full p-2 border rounded" />
       <input type="text" id="rolename" placeholder="role" required class="w-full p-2 border rounded" />
       <button type="submit" class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700 w-full">Submit</button>
     </form>
@@ -186,7 +186,7 @@
        <thead class="bg-blue-600 text-white sticky top-0 z-10">
 
               <tr class="bg-gray-200 text-gray-700">
-                <th class="px-4 py-2">#</th>
+                <th class="px-4 py-2">ID</th>
                 <th class="px-4 py-2">UserName</th>
                 <th class="px-4 py-2">role</th>
              
@@ -214,7 +214,7 @@
   <!-- Settings -->
     
   <!-- JS -->
-  <script src="main.js"></script>
+  <script src="./Scripts/main.js"></script>
 
    
 
